--- a/fleet-demo/package.json
+++ b/fleet-demo/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
+    "indexedb-drizzle": "file:..",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
